--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </p>
   
   <p>
-    <h1>联系我们:<h1>
+    <h1>联系我们:</h1>
     电话(Tel): <a href="tel:13840983435">13840983435</a>
     邮箱(Email): <a href="mailto:rf-0214@163.com">rf-0214@163.com</a>
     传真(Fax):
