--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>大连宜菲国际物流有限公司</title>
+	<title>大连益菲国际物流有限公司</title>
 	<meta charset="utf-8"/>
 	<meta name="author" content="Fei Ren"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -16,7 +16,7 @@
 <body>
   <header>
   <img src="logo.jpg" alt="LOGO"/>
-  <h1>大连宜菲国际物流有限公司</h1>
+  <h1>大连益菲国际物流有限公司</h1>
   </header>
   
   <p>
@@ -32,7 +32,7 @@
   </p>
   
   <footer>
-    &copy;2021宜菲国际物流
+    &copy;2021益菲国际物流
   </footer>
 </body>
 </html>
